# warden

./: .gitignore  Cargo.toml  README.md  audit_log.audit  pyproject.toml  results.md  test_heuristic.db-shm
.codeforge/: decisions.md  knowledge.db  knowledge.db-shm  knowledge.db-wal
.exoskeleton/: failure_patterns.json
.gemini/: settings.json
codeforge_mcp/: __init__.py  indexer.py  logging.py  server.py  watcher.py
codeforge_mcp/ast/: __init__.py  indexer.py
codeforge_mcp/graph/: __init__.py  store.py
codeforge_mcp/lsp/: __init__.py  multiplexer.py
codeforge_mcp/subagents/: __init__.py  orchestrator.py
codeforge_mcp/tools/: __init__.py  cognition.py  dependency.py  execution.py  file_ops.py  memory.py  navigation.py  patch.py  responses.py  safe_edit.py  understanding.py
scripts/: install_language_servers.sh
src/: context_engine.rs  editing_engine.rs  execution_tracer.rs  lsp_client.rs  main.rs  mcp_router.rs  sandbox.rs  scratchpad.rs  state_machine.rs  tools.rs  tree_sitter_utils.rs  vector_db.rs  workspace.rs
tests/: temp_test_file.py  test_ast.py  test_cognition.py  test_dependency.py  test_execution.py  test_file_ops.py  test_graph.py  test_indexer.py  test_logging.py  test_memory.py  test_multiplexer.py  test_navigation.py  test_orchestrator.py  test_patch.py  test_safe_edit.py  test_server.py  test_understanding.py  test_watcher.py  verify_final.py
