[package]
name = "warden-mcp"
version = "0.1.0"
edition = "2021"
description = "Hyper-strict MCP server for sandboxed LLM code execution and verification"
authors = ["Warden Team"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
mcp-core = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
nix = { version = "0.27", features = ["fs", "user", "mount"] }
walkdir = "2.4"
libc = "0.2"
caps = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-typescript = "0.20"
lsp-types = "0.95"
uuid = { version = "1.6", features = ["v4"] }
dashmap = "5.5"
parking_lot = "0.12"
flume = "0.10"
syscallz = "0.17"
onnxruntime = "0.0.14"
tokenizers = "0.15"
ndarray = "0.15"
regex = "1"

[dev-dependencies]
tempfile = "3.9"
assert_cmd = "2.0"

[[bin]]
name = "warden-mcp"
path = "src/main.rs"
