[project]
name = "codeforge-mcp"
version = "0.1.0"
description = "MCP server exposing a persistent 5-layer knowledge graph for AI agents navigating codebases"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.8",
    "tree-sitter>=0.25",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-bash>=0.23",
    "tree-sitter-languages>=1.10",
    "tree-sitter-lua>=0.5",
    "xxhash>=3.4",
    "pathspec>=0.12",
    "pydantic>=2.0",
    "watchfiles>=1.0",
    "networkx>=3.0",
    "tiktoken>=0.7",
]

[project.scripts]
codeforge-mcp = "codeforge_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "standard"
include = ["codeforge_mcp"]
exclude = ["tests"]
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportMissingParameterType = false
reportMissingTypeArgument = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 60
